# ci-cd-demo

./: Cargo.toml  Procfile  README.md
.github/workflows/: build.yml  deploy.yml
src/: main.rs
